src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Allergies__c</fullName>
        <inlineHelpText>Does your child have any dietary restrictions or food allergies (vegetarian, vegan, dairy, gluten, nuts, kosher, Halal, seafood, no pork products, etc.)? If Yes, please explain. If No, please check the box below.</inlineHelpText>
        <label>Allergies / Food Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Name__c</fullName>
        <inlineHelpText>Emergency Contact Name</inlineHelpText>
        <label>Emergency Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Phone__c</fullName>
        <inlineHelpText>Emergency Contact&apos;s Phone</inlineHelpText>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Relationship__c</fullName>
        <inlineHelpText>Emergency Contact&apos;s Relationship to Child</inlineHelpText>
        <label>Emergency Contact Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_1_Name__c</fullName>
        <inlineHelpText>Authorized Pickup 1 Name</inlineHelpText>
        <label>Authorized Pickup 1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_1_Phone__c</fullName>
        <inlineHelpText>Authorized Pickup 1&apos;s Phone #</inlineHelpText>
        <label>Authorized Pickup 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_1_Relationship__c</fullName>
        <inlineHelpText>Authorized Pickup 1&apos;s Relationship to Child</inlineHelpText>
        <label>Authorized Pickup 1 Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_2_Name__c</fullName>
        <inlineHelpText>Authorized Pickup 2 Name</inlineHelpText>
        <label>Authorized Pickup 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_2_Phone__c</fullName>
        <inlineHelpText>Authorized Pickup 2&apos;s Phone #</inlineHelpText>
        <label>Authorized Pickup 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_2_Relationship__c</fullName>
        <inlineHelpText>Authorized Pickup 2&apos;s Relationship to Child</inlineHelpText>
        <label>Authorized Pickup 2 Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_3_Name__c</fullName>
        <inlineHelpText>Authorized Pickup 3 Name</inlineHelpText>
        <label>Authorized Pickup 3 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_3_Phone__c</fullName>
        <inlineHelpText>Authorized Pickup 3&apos;s Phone #</inlineHelpText>
        <label>Authorized Pickup 3 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_3_Relationship__c</fullName>
        <inlineHelpText>Authorized Pickup 3&apos;s Relationship to Child</inlineHelpText>
        <label>Authorized Pickup 3 Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Name__c</fullName>
        <inlineHelpText>Second Emergency Contact&apos;s Name</inlineHelpText>
        <label>Emergency Contact 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Phone__c</fullName>
        <inlineHelpText>Emergency Contact 2&apos;s Phone</inlineHelpText>
        <label>Emergency Contact 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Relationship__c</fullName>
        <inlineHelpText>Emergency Contact 2&apos;s Relationship to Child</inlineHelpText>
        <label>Emergency Contact 2 Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Preferred_Medical_Provider__c</fullName>
        <label>Emergency Preferred Medical Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <inlineHelpText>Please select any terms that apply to your family.</inlineHelpText>
        <label>Family Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refugee</fullName>
                </value>
                <value>
                    <fullName>Immigrant</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
                <value>
                    <fullName>Does not apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <inlineHelpText>Please choose your annual household income range:</inlineHelpText>
        <label>Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $20,000</fullName>
                </value>
                <value>
                    <fullName>$20,000-$39,999</fullName>
                </value>
                <value>
                    <fullName>$40,000-$59,999</fullName>
                </value>
                <value>
                    <fullName>$60,000-$79,999</fullName>
                </value>
                <value>
                    <fullName>Over $80,000</fullName>
                </value>
                <value>
                    <fullName>Decline to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medication__c</fullName>
        <inlineHelpText>Does your child have any health condition(s) that Techbridge Girls should be aware of? If Yes, please explain. If No, please check the box below.</inlineHelpText>
        <label>Medication / Health Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_in_Household_Picklist__c</fullName>
        <inlineHelpText>How many people live in your household:</inlineHelpText>
        <label>Number in Household (Picklist)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>More than 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_in_Household__c</fullName>
        <description>As reported by Parent (not based on Household Account)</description>
        <inlineHelpText>How many people live in your household (2, 3, 4, 5, etc.):</inlineHelpText>
        <label>Number in Household</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Education__c</fullName>
        <description>What level of education did the parent finish?</description>
        <inlineHelpText>How far did you go in school? I finished…</inlineHelpText>
        <label>Parent Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elementary school</fullName>
                </value>
                <value>
                    <fullName>Middle school</fullName>
                </value>
                <value>
                    <fullName>High school diploma or G.E.D.</fullName>
                </value>
                <value>
                    <fullName>Trade/vocational school certificate</fullName>
                </value>
                <value>
                    <fullName>2-year college degree</fullName>
                </value>
                <value>
                    <fullName>4-year college degree</fullName>
                </value>
                <value>
                    <fullName>Master&apos;s degree</fullName>
                </value>
                <value>
                    <fullName>Ph.D., M.D., J.D. or other professional degree</fullName>
                </value>
                <value>
                    <fullName>Does not apply</fullName>
                </value>
                <value>
                    <fullName>Decline to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Education_second_parent__c</fullName>
        <description>What level did of education did the second parent finish?</description>
        <inlineHelpText>If applicable, please indicate how far your child’s other parent or guardian went in school? He/she finished…</inlineHelpText>
        <label>Parent Education - second parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elementary school,</fullName>
                </value>
                <value>
                    <fullName>Middle school</fullName>
                </value>
                <value>
                    <fullName>High school diploma or G.E.D.</fullName>
                </value>
                <value>
                    <fullName>Trade/vocational school certificate</fullName>
                </value>
                <value>
                    <fullName>2-year college degree</fullName>
                </value>
                <value>
                    <fullName>4-year college degree</fullName>
                </value>
                <value>
                    <fullName>Master&apos;s degree</fullName>
                </value>
                <value>
                    <fullName>Ph.D., M.D., J.D. or other professional degree</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
                <value>
                    <fullName>Does not apply</fullName>
                </value>
                <value>
                    <fullName>Decline to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Workplace__c</fullName>
        <description>From the Form Assembly parent packet only. Add Parent&apos;s primary affiliation by hand.</description>
        <inlineHelpText>Parent Workplace/Occupation</inlineHelpText>
        <label>Parent Workplace / Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <inlineHelpText>Which way would you prefer we contact you?</inlineHelpText>
        <label>Preferred Method of Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <inlineHelpText>Which best describes your child (please select all that apply):</inlineHelpText>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian/Alaska Native</fullName>
                </value>
                <value>
                    <fullName>African American/Black</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Hispanic/Latina</fullName>
                </value>
                <value>
                    <fullName>Middle Eastern</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Declined To Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Special_Needs__c</fullName>
        <inlineHelpText>Is there anything else you would like Techbridge Girls to know about your child? (IEP, ADHD, sensory integration needs, dyslexic, emotional needs, mobility restrictions, etc.)?</inlineHelpText>
        <label>Student Special Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Transportation__c</fullName>
        <inlineHelpText>Please choose one option regarding your child’s transportation home after Techbridge Girls program ends:</inlineHelpText>
        <label>Student Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>May walk/bus home</fullName>
                </value>
                <value>
                    <fullName>Will receive a ride</fullName>
                    <label>Someone will pick up my child</label>
                </value>
                <value>
                    <fullName>My child can go to the after school program at the school</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_shirt_Size__c</fullName>
        <inlineHelpText>What size T-shirt does your child wear?</inlineHelpText>
        <label>T-shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>X Small</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>X Large</fullName>
                </value>
                <value>
                    <fullName>2X Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Translation_Needed_Other__c</fullName>
        <inlineHelpText>Other Language:</inlineHelpText>
        <label>Translation Needed: Other</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Needed__c</fullName>
        <inlineHelpText>If you would like materials translated, please indicate the language:</inlineHelpText>
        <label>Translation Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do not need translation</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Somali</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <description>How a parent would like to volunteer with Techbridge.</description>
        <inlineHelpText>If you are able to volunteer this year, please let us know how you can help: (Select all that apply)</inlineHelpText>
        <label>Volunteer?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not able to volunteer</fullName>
                </value>
                <value>
                    <fullName>Make calls</fullName>
                    <label>Make calls in English</label>
                </value>
                <value>
                    <fullName>Make bilingual calls</fullName>
                    <label>Make calls in another language</label>
                </value>
                <value>
                    <fullName>Chaperone on a field trip (middle and high school only)</fullName>
                </value>
                <value>
                    <fullName>Able to help drive children to local events</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>